fixed name card overflow

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ html, body {
     background: rgba(255,255,255,0.5);
     backdrop-filter: blur(10px);
     border-radius: 10px;
+    overflow: hidden;
 }
 
 .namecard > div{
